<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="20dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_trans"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txid_tv_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.20"
                android:gravity="center_vertical"
                android:padding="16dp"
                android:text="@string/txid"
                android:textColor="@color/colorWhite"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txid_tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.80"
                android:gravity="center_vertical"
                android:padding="16dp"
                android:textColor="@color/colorWhite"
                android:textSize="14sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorWhite" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/value_tv_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.20"
                android:gravity="center_vertical"
                android:padding="16dp"
                android:text="@string/value"
                android:textColor="@color/colorWhite"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/value_tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.80"
                android:gravity="center_vertical"
                android:padding="16dp"
                android:textColor="@color/colorWhite"
                android:textSize="14sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorWhite" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/size_tv_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.20"
                android:gravity="center_vertical"
                android:padding="16dp"
                android:text="@string/size"
                android:textColor="@color/colorWhite"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/size_tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.80"
                android:gravity="center_vertical"
                android:padding="16dp"
                android:textColor="@color/colorWhite"
                android:textSize="14sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorWhite" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fee_tv_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.20"
                android:gravity="center_vertical"
                android:padding="16dp"
                android:text="@string/fee"
                android:textColor="@color/colorWhite"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fee_tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.80"
                android:gravity="center_vertical"
                android:padding="16dp"
                android:textColor="@color/colorWhite"
                android:textSize="14sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.cardview.widget.CardView>